--- a/Tutorial_AudioProtoPNet.ipynb
+++ b/Tutorial_AudioProtoPNet.ipynb
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:03.797510Z",
-     "start_time": "2025-08-28T13:32:03.795241Z"
+     "end_time": "2025-08-28T14:39:14.524857Z",
+     "start_time": "2025-08-28T14:39:14.522406Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:09.848007Z",
-     "start_time": "2025-08-28T13:32:03.860907Z"
+     "end_time": "2025-08-28T14:39:20.604060Z",
+     "start_time": "2025-08-28T14:39:14.577581Z"
     }
    },
    "cell_type": "code",
@@ -75,8 +75,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:10.028239Z",
-     "start_time": "2025-08-28T13:32:10.026021Z"
+     "end_time": "2025-08-28T14:39:20.784989Z",
+     "start_time": "2025-08-28T14:39:20.782710Z"
     }
    },
    "cell_type": "code",
@@ -88,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:12.263585Z",
-     "start_time": "2025-08-28T13:32:10.087004Z"
+     "end_time": "2025-08-28T14:39:23.047774Z",
+     "start_time": "2025-08-28T14:39:20.843258Z"
     }
    },
    "cell_type": "code",
@@ -110,8 +110,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:14.041476Z",
-     "start_time": "2025-08-28T13:32:12.319351Z"
+     "end_time": "2025-08-28T14:39:24.832789Z",
+     "start_time": "2025-08-28T14:39:23.108008Z"
     }
    },
    "cell_type": "code",
@@ -158,8 +158,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:14.770515Z",
-     "start_time": "2025-08-28T13:32:14.460876Z"
+     "end_time": "2025-08-28T14:39:25.475850Z",
+     "start_time": "2025-08-28T14:39:25.164552Z"
     }
    },
    "cell_type": "code",
@@ -213,8 +213,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:15.273992Z",
-     "start_time": "2025-08-28T13:32:14.900459Z"
+     "end_time": "2025-08-28T14:39:26.162142Z",
+     "start_time": "2025-08-28T14:39:25.586768Z"
     }
    },
    "cell_type": "code",
@@ -226,8 +226,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:15.398160Z",
-     "start_time": "2025-08-28T13:32:15.364841Z"
+     "end_time": "2025-08-28T14:39:26.253703Z",
+     "start_time": "2025-08-28T14:39:26.216505Z"
     }
    },
    "cell_type": "code",
@@ -245,8 +245,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:15.623161Z",
-     "start_time": "2025-08-28T13:32:15.452453Z"
+     "end_time": "2025-08-28T14:39:26.476589Z",
+     "start_time": "2025-08-28T14:39:26.309619Z"
     }
    },
    "cell_type": "code",
@@ -273,6 +273,56 @@
    "execution_count": 9
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-28T14:39:27.359661Z",
+     "start_time": "2025-08-28T14:39:26.710501Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "outputs = model(mel_spec_norm)",
+   "id": "c7258ac715027d9e",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Model hidden states\n",
+    "The last hidden state or all hidden states can be obtained with the `AutoModelForSequenceClassification`.\n",
+    "A pooled version can be obtained by using the `AutoModel` class and accessing the `pooler_output`."
+   ],
+   "id": "51f2f2cc63493105"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-28T14:39:27.419885Z",
+     "start_time": "2025-08-28T14:39:27.416753Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# access the unpooled last hidden state\n",
+    "outputs[\"last_hidden_state\"].shape"
+   ],
+   "id": "3c434a916411126b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1024, 8, 10])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
@@ -284,24 +334,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:17.060471Z",
-     "start_time": "2025-08-28T13:32:15.937620Z"
+     "end_time": "2025-08-28T14:39:27.476116Z",
+     "start_time": "2025-08-28T14:39:27.473731Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "outputs = model(mel_spec_norm)\n",
+    "\n",
     "probabilities = torch.sigmoid(outputs[0]).detach()"
    ],
    "id": "a2f3ef308ea62474",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:17.208687Z",
-     "start_time": "2025-08-28T13:32:17.206314Z"
+     "end_time": "2025-08-28T14:39:27.534489Z",
+     "start_time": "2025-08-28T14:39:27.532283Z"
     }
    },
    "cell_type": "code",
@@ -311,13 +361,13 @@
    ],
    "id": "5befab3da7271cec",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:17.262780Z",
-     "start_time": "2025-08-28T13:32:17.260796Z"
+     "end_time": "2025-08-28T14:39:27.611420Z",
+     "start_time": "2025-08-28T14:39:27.609043Z"
     }
    },
    "cell_type": "code",
@@ -328,13 +378,13 @@
    ],
    "id": "ee17b3c17cd97888",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T13:32:17.324103Z",
-     "start_time": "2025-08-28T13:32:17.321125Z"
+     "end_time": "2025-08-28T14:39:27.668537Z",
+     "start_time": "2025-08-28T14:39:27.665323Z"
     }
    },
    "cell_type": "code",
@@ -362,7 +412,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 15
   }
  ],
  "metadata": {
